z-chart/templates/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels: 
    app: backend
  namespace: ziad
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
