z-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ziad-ingress
  namespace: ziad
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - ziada.praxis-form.de
      secretName: ziad-praxis-tls
  ingressClassName: nginx
  rules:
    -  host: ziada.praxis-form.de
       http:
          paths:
            - path: /api
              pathType: Prefix
              backend:
                service:
                  name: backend-service
                  port:
                    number: 8080

            - path: /
              pathType: Prefix
              backend:
                service:
                  name: frontend-service
                  port:
                    number: 80
